[metadata]
name = panricci
version = attr: panricci.__version__
author = Jorge Avila Cartes
author_email = jorgeavilacartes@gmail.com
description = Alignment of pangenome graphs with Ricci-Flow
long_description = file: README.md #, CHANGELOG.rst, LICENSE.rst
keywords = pangenome, graph, variation graph, sequence graph, alignment, graph isomorphism, ricci-flow, geometria riemanniana
license = GNU GENERAL PUBLIC LICENSE
license_files = LICENSE
classifiers =
    Intended Audience :: Bioinformaticians
    Programming Language :: Python

[options]
include_package_data = True
packages = find:
package_dir = 
    =src
python_requires = >=3.9, <=3.11
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    panricci = panricci.panricci_cli:app
    
[options.packages.find]
where = src